force-app/main/default/objects/Master_Object__c/Master_Object__c.object-meta.xml
<CustomObject>
    <label>Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>