force-app/main/default/objects/Master_Object__c/fields/Active_template__c.field-meta.xml
<CustomField>
    <fullName>Active_template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active template</label>
    <type>Checkbox</type>
</CustomField>