force-app/main/default/objects/Master_Object__c/fields/Allow_patient_to_schedule_zoom_meeting__c.field-meta.xml
<CustomField>
    <fullName>Allow_patient_to_schedule_zoom_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether the &quot;Schedule Zoom Meeting&quot; checkbox should be visible in the portal or not.</description>
    <label>Allow patient to schedule zoom meeting</label>
    <type>Checkbox</type>
</CustomField>