force-app/main/default/objects/Master_Object__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <description>Used to store the App type</description>
    <label>App Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elixir_Contact_Center</fullName>
                <label>Elixir Contact Center</label>
            </value>
            <value>
                <fullName>Elixir_EHR</fullName>
                <default>true</default>
                <label>Elixir EHR</label>
            </value>
            <value>
                <fullName>Elixir_Billing</fullName>
                <label>Elixir Billing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>