force-app/main/default/objects/Master_Object__c/fields/Appointment_types__c.field-meta.xml
<CustomField>
    <fullName>Appointment_types__c</fullName>
    <description>This field stores all the appointment types that are visible on patient portal.</description>
    <label>Appointment Types</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>