force-app/main/default/objects/Master_Object__c/fields/Approval_Level_For__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_For__c</fullName>
    <label>Approval Level For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescription Order</fullName>
            </value>
            <value>
                <fullName>Lab Order</fullName>
            </value>
            <value>
                <fullName>Care Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>