force-app/main/default/objects/Master_Object__c/fields/Approval_Members__c.field-meta.xml
<CustomField>
    <fullName>Approval_Members__c</fullName>
    <label>Approval Members</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>