force-app/main/default/objects/Master_Object__c/fields/Approval_Members_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Members_Name__c</fullName>
    <label>Approval Members Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>