force-app/main/default/objects/Master_Object__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>