force-app/main/default/objects/Master_Object__c/fields/Approver_List__c.field-meta.xml
<CustomField>
    <fullName>Approver_List__c</fullName>
    <label>Approver List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>