force-app/main/default/objects/Master_Object__c/fields/CodeFormula__c.field-meta.xml
<CustomField>
    <fullName>CodeFormula__c</fullName>
    <formula>IF( RecordType.Name == &apos;Adjustment Codes&apos;,TEXT( Adjustment_Group_Code__c)+TEXT( ElixirSuite_Adjustment_Reason_Code__c ), IF( RecordType.Name == &apos;Supplemental Remark Codes&apos;, TEXT( Supplemental_Group_Code__c )+TEXT( Adjustment_Group_Code__c)+TEXT( ElixirSuite_Adjustment_Reason_Code__c ), null))</formula>
    <label>CodeFormula</label>
    <type>Text</type>
</CustomField>