force-app/main/default/objects/Master_Object__c/fields/Coding_System__c.field-meta.xml
<CustomField>
    <fullName>Coding_System__c</fullName>
    <description>This value will be indicating the type coding system used for this master record.</description>
    <label>Coding System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNOMEDCT</fullName>
            </value>
            <value>
                <fullName>LOINC</fullName>
            </value>
            <value>
                <fullName>RXNorm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>