force-app/main/default/objects/Master_Object__c/fields/Columns_for_Portal_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Columns_for_Portal_Appointment__c</fullName>
    <description>This field is used to save the columns to define for the portal Appointment Listview</description>
    <label>Columns for Portal Appointment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>