force-app/main/default/objects/Master_Object__c/fields/Company_logo__c.field-meta.xml
<CustomField>
    <fullName>Company_logo__c</fullName>
    <label>Company logo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>