force-app/main/default/objects/Master_Object__c/fields/Component_attributes__c.field-meta.xml
<CustomField>
    <fullName>Component_attributes__c</fullName>
    <label>Component attributes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>