force-app/main/default/objects/Master_Object__c/fields/Component_name__c.field-meta.xml
<CustomField>
    <fullName>Component_name__c</fullName>
    <label>Component name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>