force-app/main/default/objects/Master_Object__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>This field is used to store all the field data types</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>date</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>date-time</fullName>
                <label>Date/Time</label>
            </value>
            <value>
                <fullName>number</fullName>
                <label>Number</label>
            </value>
            <value>
                <fullName>text</fullName>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>