force-app/main/default/objects/Master_Object__c/fields/ElixirSuite_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>ElixirSuite_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>