force-app/main/default/objects/Master_Object__c/fields/ElixirSuite_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>ElixirSuite_Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>