force-app/main/default/objects/Master_Object__c/fields/Enable_Appointment_Booking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Appointment_Booking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Appointment Booking</label>
    <type>Checkbox</type>
</CustomField>