force-app/main/default/objects/Master_Object__c/fields/Enable_Pay_Now__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pay_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable the Pay Now button in the custom appointment detail page</description>
    <label>Enable Pay Now</label>
    <type>Checkbox</type>
</CustomField>