force-app/main/default/objects/Master_Object__c/fields/Enable_Session_Note__c.field-meta.xml
<CustomField>
    <fullName>Enable_Session_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Session Note</label>
    <type>Checkbox</type>
</CustomField>