force-app/main/default/objects/Master_Object__c/fields/Enable_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enable_Visit_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to control the visibility(sharing to portal)  of the visit notes button in the portal</description>
    <label>Enable Visit Notes</label>
    <type>Checkbox</type>
</CustomField>