force-app/main/default/objects/Master_Object__c/fields/Enable_Visit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Enable_Visit_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable/disable visit summary for patient</description>
    <label>Enable Visit Summary</label>
    <type>Checkbox</type>
</CustomField>