force-app/main/default/objects/Master_Object__c/fields/Feed_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Feed_Comment_Id__c</fullName>
    <label>Feed Comment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>