force-app/main/default/objects/Master_Object__c/fields/FeedComment_Related_Id__c.field-meta.xml
<CustomField>
    <fullName>FeedComment_Related_Id__c</fullName>
    <description>this field is used to store the related id i.e., Account Id or User Id</description>
    <label>FeedComment Related Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>