force-app/main/default/objects/Master_Object__c/fields/Field_Api__c.field-meta.xml
<CustomField>
    <fullName>Field_Api__c</fullName>
    <label>Field Api</label>
    <type>TextArea</type>
</CustomField>