force-app/main/default/objects/Master_Object__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <type>TextArea</type>
</CustomField>