force-app/main/default/objects/Master_Object__c/fields/Form_name__c.field-meta.xml
<CustomField>
    <fullName>Form_name__c</fullName>
    <label>Form name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>