force-app/main/default/objects/Master_Object__c/fields/Hierarchical_Code__c.field-meta.xml
<CustomField>
    <fullName>Hierarchical_Code__c</fullName>
    <description>Hierarchical Code for races, Ethnicity, Preferred language</description>
    <label>Hierarchical Code</label>
    <type>TextArea</type>
</CustomField>