force-app/main/default/objects/Master_Object__c/fields/Is_Company_logo__c.field-meta.xml
<CustomField>
    <fullName>Is_Company_logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Company logo</label>
    <type>Checkbox</type>
</CustomField>