force-app/main/default/objects/Master_Object__c/fields/Is_Dynamic_Column_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Dynamic_Column_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Makrs whether to show this column in notes list view or not</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>