force-app/main/default/objects/Master_Object__c/fields/isArchive__c.field-meta.xml
<CustomField>
    <fullName>isArchive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to check the messages are archive or not.</description>
    <label>isArchive</label>
    <type>Checkbox</type>
</CustomField>