force-app/main/default/objects/Master_Object__c/fields/isBookmark__c.field-meta.xml
<CustomField>
    <fullName>isBookmark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to check messages are bookmark or not.</description>
    <label>isBookmark</label>
    <type>Checkbox</type>
</CustomField>