force-app/main/default/objects/Master_Object__c/fields/Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Master_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Object</label>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Master Objects</relationshipLabel>
    <relationshipName>Master_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>