force-app/main/default/objects/Master_Object__c/fields/Object_Color__c.field-meta.xml
<CustomField>
    <fullName>Object_Color__c</fullName>
    <label>Object Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>