force-app/main/default/objects/Master_Object__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <label>Parent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>