force-app/main/default/objects/Master_Object__c/fields/Patient_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Patient_Account_Lookup__c</fullName>
    <label>Patient Account Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>