force-app/main/default/objects/Master_Object__c/fields/Patient_Tile_Entity__c.field-meta.xml
<CustomField>
    <fullName>Patient_Tile_Entity__c</fullName>
    <label>Patient Tile Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Visit Summary</fullName>
            </value>
            <value>
                <fullName>Portal Definition</fullName>
            </value>
            <value>
                <fullName>Visit Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>