force-app/main/default/objects/Master_Object__c/fields/Patient_Tile_Order__c.field-meta.xml
<CustomField>
    <fullName>Patient_Tile_Order__c</fullName>
    <label>[Patient Tile] Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>