force-app/main/default/objects/Master_Object__c/fields/Phi__c.field-meta.xml
<CustomField>
    <fullName>Phi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phi</label>
    <type>Checkbox</type>
</CustomField>