force-app/main/default/objects/Master_Object__c/fields/Pre_Launch_Validation__c.field-meta.xml
<CustomField>
    <fullName>Pre_Launch_Validation__c</fullName>
    <label>Pre Launch Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>