force-app/main/default/objects/Master_Object__c/fields/Selected_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Appointment_Type__c</fullName>
    <label>Selected Appointment Type</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>