force-app/main/default/objects/Master_Object__c/fields/Supplemental_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Group_Code__c</fullName>
    <label>Supplemental Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplemental_Remark_Code</valueSetName>
    </valueSet>
</CustomField>