force-app/main/default/objects/Master_Object__c/fields/TAB_Component_Attributes__c.field-meta.xml
<CustomField>
    <fullName>TAB_Component_Attributes__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <label>Component Attributes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>