force-app/main/default/objects/Master_Object__c/fields/TAB_Component_Definition__c.field-meta.xml
<CustomField>
    <fullName>TAB_Component_Definition__c</fullName>
    <label>Component Definition</label>
    <type>TextArea</type>
</CustomField>