force-app/main/default/objects/Master_Object__c/fields/TAB_Event_Params__c.field-meta.xml
<CustomField>
    <fullName>TAB_Event_Params__c</fullName>
    <label>Event Params</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>