force-app/main/default/objects/Master_Object__c/fields/TAB_Form_Categories__c.field-meta.xml
<CustomField>
    <fullName>TAB_Form_Categories__c</fullName>
    <label>Form Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NursingForms</fullName>
            </value>
            <value>
                <fullName>Sleep_Physician_Notes</fullName>
            </value>
            <value>
                <fullName>Dentists_Notes</fullName>
            </value>
            <value>
                <fullName>Prescriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>