force-app/main/default/objects/Master_Object__c/fields/TAB_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>TAB_Icon_Name__c</fullName>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>