force-app/main/default/objects/Master_Object__c/fields/TAB_Is_Direct_Tab_Launch__c.field-meta.xml
<CustomField>
    <fullName>TAB_Is_Direct_Tab_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Direct Tab Launch</label>
    <type>Checkbox</type>
</CustomField>