force-app/main/default/objects/Master_Object__c/fields/TAB_Is_Sub_Tab_Allowed__c.field-meta.xml
<CustomField>
    <fullName>TAB_Is_Sub_Tab_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sub Tab Allowed</label>
    <type>Checkbox</type>
</CustomField>