force-app/main/default/objects/Master_Object__c/fields/Tab_Label__c.field-meta.xml
<CustomField>
    <fullName>Tab_Label__c</fullName>
    <label>Tab Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>