force-app/main/default/objects/Master_Object__c/fields/TAB_Method_Name_If_Any__c.field-meta.xml
<CustomField>
    <fullName>TAB_Method_Name_If_Any__c</fullName>
    <label>Method Name (If Any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>