force-app/main/default/objects/Master_Object__c/fields/TAB_Navigation_Event__c.field-meta.xml
<CustomField>
    <fullName>TAB_Navigation_Event__c</fullName>
    <label>Navigation Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>e.force:navigateToComponent</fullName>
            </value>
            <value>
                <fullName>e.force:navigateToURL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>