force-app/main/default/objects/Master_Object__c/fields/TAB_Type_Of_Launch__c.field-meta.xml
<CustomField>
    <fullName>TAB_Type_Of_Launch__c</fullName>
    <label>Type Of Launch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>event</fullName>
            </value>
            <value>
                <fullName>component</fullName>
            </value>
            <value>
                <fullName>workspace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>