force-app/main/default/objects/Master_Object__c/fields/TABSub_Tab_Label__c.field-meta.xml
<CustomField>
    <fullName>TABSub_Tab_Label__c</fullName>
    <label>Sub Tab Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ElixirSuite__Admission_Forms__c</fullName>
                <label>Admission Forms</label>
            </value>
            <value>
                <fullName>ElixirSuite__Billing_Summary__c</fullName>
                <label>Billing Summary</label>
            </value>
            <value>
                <fullName>ElixirSuite__Capture_Signature__c</fullName>
                <label>Capture Signature</label>
            </value>
            <value>
                <fullName>ElixirSuite__Care_Episode__c</fullName>
                <label>Care Episode</label>
            </value>
            <value>
                <fullName>ElixirSuite__Care_Plan__c</fullName>
                <label>Care Plan</label>
            </value>
            <value>
                <fullName>ElixirSuite__CHC_Prescription_Order__c</fullName>
                <label>CHC Prescription Order</label>
            </value>
            <value>
                <fullName>ElixirSuite__Claims__c</fullName>
                <label>Claims</label>
            </value>
            <value>
                <fullName>ElixirSuite__Clinical_Forms__c</fullName>
                <label>Clinical Forms</label>
            </value>
            <value>
                <fullName>ElixirSuite__CostOfCare__c</fullName>
                <label>CostOfCare</label>
            </value>
            <value>
                <fullName>ElixirSuite__Discharge_Form__c</fullName>
                <label>Discharge Form</label>
            </value>
            <value>
                <fullName>ElixirSuite__First_Visit_Notes__c</fullName>
                <label>First Visit Notes</label>
            </value>
            <value>
                <fullName>ElixirSuite__Generate_Verification_Code__c</fullName>
                <label>Generate Verification Code</label>
            </value>
            <value>
                <fullName>ElixirSuite__Integrated_Lab_Order__c</fullName>
                <label>Lab Orders</label>
            </value>
            <value>
                <fullName>ElixirSuite__Lab_Orders__c</fullName>
                <label>Manual Lab Orders</label>
            </value>
            <value>
                <fullName>ElixirSuite__Master_Problem_List__c</fullName>
                <label>Master Problem List</label>
            </value>
            <value>
                <fullName>ElixirSuite__MedicalCoding__c</fullName>
                <label>MedicalCoding</label>
            </value>
            <value>
                <fullName>ElixirSuite__Medical_Examination__c</fullName>
                <label>Medical Examination</label>
            </value>
            <value>
                <fullName>ElixirSuite__MOR_MAR__c</fullName>
                <label>MOR/MAR</label>
            </value>
            <value>
                <fullName>ElixirSuite__NewCrop_Prescription_Order__c</fullName>
                <label>NewCrop Prescription Order</label>
            </value>
            <value>
                <fullName>ElixirSuite__Notes_Forms__c</fullName>
                <label>Notes Forms</label>
            </value>
            <value>
                <fullName>ElixirSuite__Nursing_Forms__c</fullName>
                <label>Nursing Forms</label>
            </value>
            <value>
                <fullName>ElixirSuite__PatientStatement__c</fullName>
                <label>PatientStatement</label>
            </value>
            <value>
                <fullName>ElixirSuite__Payment__c</fullName>
                <label>Payment</label>
            </value>
            <value>
                <fullName>ElixirSuite__PaymentSchedule__c</fullName>
                <label>PaymentSchedule</label>
            </value>
            <value>
                <fullName>ElixirSuite__Prescriptions__c</fullName>
                <label>Prescriptions</label>
            </value>
            <value>
                <fullName>ElixirSuite__Procedure__c</fullName>
                <label>Procedure</label>
            </value>
            <value>
                <fullName>ElixirSuite__Progress_Notes__c</fullName>
                <label>Progress Notes</label>
            </value>
            <value>
                <fullName>ElixirSuite__Review_Forms__c</fullName>
                <label>Review Forms</label>
            </value>
            <value>
                <fullName>ElixirSuite__Send_Data_For_Claims__c</fullName>
                <label>Send Data For Claims</label>
            </value>
            <value>
                <fullName>ElixirSuite__Timeline__c</fullName>
                <label>Timeline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>