force-app/main/default/objects/Master_Object__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <description>Unique Identifier for races, Ethnicity, Preferred language</description>
    <label>Unique Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>