force-app/main/default/objects/Master_Object__c/fields/Visit_Summary_Sections__c.field-meta.xml
<CustomField>
    <fullName>Visit_Summary_Sections__c</fullName>
    <label>Visit Summary Sections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Problem(s)</fullName>
            </value>
            <value>
                <fullName>Vital Signs</fullName>
            </value>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Diagnosis Code(s)</fullName>
            </value>
            <value>
                <fullName>Lab Order(s)</fullName>
            </value>
            <value>
                <fullName>Prescription(s)</fullName>
            </value>
            <value>
                <fullName>Procedure Code(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>