force-app/main/default/objects/Master_Object__c/recordTypes/Approval_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Approval_Configuration</fullName>
    <active>true</active>
    <label>Approval Configuration</label>
</RecordType>