force-app/main/default/objects/Master_Object__c/recordTypes/CarePlan_Configuration.recordType-meta.xml
<RecordType>
    <fullName>CarePlan_Configuration</fullName>
    <active>true</active>
    <label>CarePlan Configuration</label>
</RecordType>