force-app/main/default/objects/Master_Object__c/recordTypes/Custom_forms.recordType-meta.xml
<RecordType>
    <fullName>Custom_forms</fullName>
    <active>true</active>
    <label>Custom forms</label>
</RecordType>