force-app/main/default/objects/Master_Object__c/recordTypes/Dosage.recordType-meta.xml
<RecordType>
    <fullName>Dosage</fullName>
    <active>true</active>
    <label>Dosage</label>
</RecordType>