force-app/main/default/objects/Master_Object__c/recordTypes/EHR_Tab.recordType-meta.xml
<RecordType>
    <fullName>EHR_Tab</fullName>
    <active>true</active>
    <label>EHR Tab</label>
</RecordType>