force-app/main/default/objects/Master_Object__c/recordTypes/ElixirSuite_Adjustment_Codes.recordType-meta.xml
<RecordType>
    <fullName>ElixirSuite_Adjustment_Codes</fullName>
    <active>true</active>
    <label>Adjustment Codes</label>
</RecordType>