force-app/main/default/objects/Master_Object__c/recordTypes/Ethnicity.recordType-meta.xml
<RecordType>
    <fullName>Ethnicity</fullName>
    <active>true</active>
    <label>Ethnicity</label>
</RecordType>