force-app/main/default/objects/Master_Object__c/recordTypes/Feed_Comment.recordType-meta.xml
<RecordType>
    <fullName>Feed_Comment</fullName>
    <active>true</active>
    <label>Feed Comment</label>
</RecordType>