force-app/main/default/objects/Master_Object__c/recordTypes/Form_Columns.recordType-meta.xml
<RecordType>
    <fullName>Form_Columns</fullName>
    <active>true</active>
    <label>Form Columns</label>
</RecordType>