force-app/main/default/objects/Master_Object__c/recordTypes/Frequency.recordType-meta.xml
<RecordType>
    <fullName>Frequency</fullName>
    <active>true</active>
    <label>Frequency</label>
</RecordType>