force-app/main/default/objects/Master_Object__c/recordTypes/Medication.recordType-meta.xml
<RecordType>
    <fullName>Medication</fullName>
    <active>true</active>
    <label>Medication</label>
</RecordType>