force-app/main/default/objects/Master_Object__c/recordTypes/Message_template.recordType-meta.xml
<RecordType>
    <fullName>Message_template</fullName>
    <active>true</active>
    <label>Message template</label>
</RecordType>