force-app/main/default/objects/Master_Object__c/recordTypes/Patient_Info_Card_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Patient_Info_Card_Configuration</fullName>
    <active>true</active>
    <label>Patient Info Card Configuration</label>
</RecordType>