force-app/main/default/objects/Master_Object__c/recordTypes/Patient_Portal.recordType-meta.xml
<RecordType>
    <fullName>Patient_Portal</fullName>
    <active>true</active>
    <label>Patient Portal</label>
</RecordType>