force-app/main/default/objects/Master_Object__c/recordTypes/Patient_Tile_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Patient_Tile_Configuration</fullName>
    <active>true</active>
    <label>Patient Tile Configuration</label>
</RecordType>