force-app/main/default/objects/Master_Object__c/recordTypes/Preferred_Language.recordType-meta.xml
<RecordType>
    <fullName>Preferred_Language</fullName>
    <active>true</active>
    <label>Preferred Language</label>
</RecordType>