force-app/main/default/objects/Master_Object__c/recordTypes/Reaction.recordType-meta.xml
<RecordType>
    <fullName>Reaction</fullName>
    <active>true</active>
    <label>Reaction</label>
</RecordType>