force-app/main/default/objects/Master_Object__c/recordTypes/Route.recordType-meta.xml
<RecordType>
    <fullName>Route</fullName>
    <active>true</active>
    <label>Route</label>
</RecordType>