force-app/main/default/objects/Master_Object__c/recordTypes/Severity.recordType-meta.xml
<RecordType>
    <fullName>Severity</fullName>
    <active>true</active>
    <label>Severity</label>
</RecordType>