force-app/main/default/objects/Master_Object__c/recordTypes/Substance.recordType-meta.xml
<RecordType>
    <fullName>Substance</fullName>
    <active>true</active>
    <label>Substance</label>
</RecordType>