force-app/main/default/objects/Master_Object__c/recordTypes/Test_Result.recordType-meta.xml
<RecordType>
    <fullName>Test_Result</fullName>
    <active>true</active>
    <label>Test Result</label>
</RecordType>