force-app/main/default/objects/Master_Object__c/recordTypes/Timeline_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Timeline_Configuration</fullName>
    <active>true</active>
    <label>Timeline Configuration</label>
</RecordType>