force-app/main/default/objects/Master_Object__c/listViews/Adjustment_Codes.listView-meta.xml
<ListView>
    <fullName>Adjustment_Codes</fullName>
    <columns>ElixirSuite_Adjustment_Reason_Code__c</columns>
    <columns>Adjustment_Group_Code__c</columns>
    <columns>ElixirSuite_Recommendation__c</columns>
    <columns>ElixirSuite_Assign_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Object__c.ElixirSuite_Adjustment_Codes</value>
    </filters>
    <label>Adjustment Codes</label>
</ListView>